[COLOR yellow][B]v1.4.3[/B][/COLOR]
* APK Update prompt - Remove TV Bro support - only Downloader/Google Chrome.
* Always show Downloader code notification window before checking if installed.
[COLOR yellow][B]v1.4.2[/B][/COLOR]
* APK Update prompt - Open Downloader / Browser (Chrome/TV Bro) instead of wizard's APK menu.
[COLOR yellow][B]v1.4.1[/B][/COLOR]
* Add APK update check: 2 options - open Downloader manually, or download through Kodi to externalFX
[COLOR yellow][B]v1.4.0[/B][/COLOR]
* Add auto prompt for APK update check on Kodi startup.
* Cancel downloader as default fx app. must configure on inital setup.
[COLOR yellow][B]v1.3.9[/B][/COLOR]
* install.py - show configured file explorer if not downloader.
[COLOR yellow][B]v1.3.8[/B][/COLOR]
* "downloader_installed_text" text change.
[COLOR yellow][B]v1.3.7[/B][/COLOR]
* APK installer menu - add settings button to kodi android update addon.
[COLOR yellow][B]v1.3.6[/B][/COLOR]
* APK installer menu - add settings button to kodi android update addon.
* Prompt to change file explorer if Downloader app installed + configured.
[COLOR yellow][B]v1.3.5[/B][/COLOR]
* Adjust APK download finished dialog by downloader_app_installed bool
[COLOR yellow][B]v1.3.4[/B][/COLOR]
* Add support for APK download through Downloader.
* Disable auto kodi restart on PC on build updates.
[COLOR yellow][B]v1.3.3[/B][/COLOR]
* BUG FIX: Auto Quick Update note_id integer fix.
[COLOR yellow][B]v1.3.2[/B][/COLOR]
* Remove from startup.py temporary build migration code.
* Rename build install / quick update menu text.
* Comment out unused "use_github_custom_save_data_config" code + remove from save data menu.
[COLOR yellow][B]v1.3.1[/B][/COLOR]
* Support restarting Kodi for custom Windows software (using -p flag, for portable_data dir)
[COLOR yellow][B]v1.2.9[/B][/COLOR]
* Skin switch - Don't show the current skin in the skins list.
[COLOR yellow][B]v1.2.8[/B][/COLOR]
* Go back to single quick update notification file URL.